# FastAPI-Chatbot-Project

./: .gitignore  README.md  pyproject.toml
app/: chatbot_routes.py  main.py
app/templates/: index.html
